<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/recurso_6mdpi"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".nickname_pick">
    <ImageView
        android:id="@+id/card"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:src="@mipmap/recurso_5mdpi"
        android:contentDescription="@string/nickname_description"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/nickname"
        android:textColor="#2B59A2"
        android:textSize="30sp"></TextView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:fontFamily="@font/poppins"
        android:text="@string/nickname_description"
        android:textColor="#2B59A2"
        android:textSize="24sp"
        android:padding="5dp"
        app:lineHeight="22dp"
        android:layout_marginBottom="20dp"></TextView>

    <EditText
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_edittxt"
        android:fontFamily="@font/poppins"
        android:hint="@string/nickname_hint"
        android:textAlignment="center"
        android:textColor="#78A9FF"
        android:inputType="text"
        android:layout_marginBottom="20dp"
        ></EditText>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B57A2"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:background="@drawable/custom_btn"
        android:text="@string/understod"
        android:textSize="20sp"
        android:onClick="Next"
        android:textColor="#FFFFFF"></Button>

</LinearLayout>