<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/recurso_6mdpi"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".before_start">

    <ImageView
        android:id="@+id/bf1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="60dp"
        android:src="@mipmap/before_start_1"
        android:contentDescription="@string/before_start"></ImageView>
    <ImageView
        android:id="@+id/oc"
        android:layout_width="350dp"
        android:layout_height="340dp"
        android:src="@mipmap/recurso_9mdpi"
        android:contentDescription="@string/before_start"></ImageView>

    <ImageView
        android:id="@+id/bf2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginRight="0dp"
        android:src="@mipmap/before_start_2"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/before_start"></ImageView>



    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B57A2"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:background="@drawable/custom_btn"
        android:text="@string/start"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:onClick="selectActivity"></Button>
    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B57A2"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:background="@drawable/custom_btn"
        android:text="@string/help"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        ></Button>
</LinearLayout>